Add bib.tex and update gitignore

--- a/main.tex
+++ b/main.tex
@@ -34,6 +34,7 @@
 
 
 \input{macros.tex}
+\input{bib.tex}
 \title{Probalisitic Software product lines\thanks{Research partially supported by the Spanish MINECO/FEDER project DArDOS (TIN2015-65845-C3-1-R) and the Comunidad de Madrid project SICOMORo-CM (S2013/ICE-3006).
 }}
 \author{Carlos Camacho \and Luis Llana\and Alberto Núñez\and Manuel Núñez}
