/ ‘concuPL.bib’ / ‘ntroduction.tex’

--- a/concuPL.bib
+++ b/concuPL.bib
@@ -2,10 +2,10 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Carlos at 2013-11-16 12:37:17 +0100 
+%% Created for Carlos at 2013-11-16 12:37:17 +0100
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
 
 %% Esta cita habrá que arreglarla cuando salga la publicación
 @inproceedings{sac2015,
@@ -17,8 +17,8 @@
  year = 2015,
  publisher = {ACM},
  note = 	 {to appear},
- 
-} 
+
+}
 
 
 @incollection{AlurTP01,
@@ -67,7 +67,7 @@ language={English}
  acmid = {1059823},
  publisher = {ACM},
  address = {New York, NY, USA},
-} 
+}
 
 
 @article{DBLP:journals/scp/ClassenBH11,
@@ -206,13 +206,13 @@ language={English}
 	url = {http://practise2.cs.tut.fi/pub/papers/domeng.pdf},
 	Year = {2002}}
 
-@techreport{kchnp90,
-	Author = {K.C. Kang and S.G. Cohen and J.A. Hess and W.E. Novak and A.S. Peterson},
-	Institution = {Carnegie Mellon University},
-	Number = {CMU/SEI-90-TR-21},
-	url ={http://www.sei.cmu.edu/reports/90tr021.pdf},
-	Title = {{F}eature-{O}riented {D}omain {A}nalysis ({FODA}) Feasibility Study},
-	Year = 1990}
+%@techreport{kchnp90,
+%	Author = {K.C. Kang and S.G. Cohen and J.A. Hess and W.E. Novak and A.S. Peterson},
+%	Institution = {Carnegie Mellon University},
+%	Number = {CMU/SEI-90-TR-21},
+%	url ={http://www.sei.cmu.edu/reports/90tr021.pdf},
+%	Title = {{F}eature-{O}riented {D}omain {A}nalysis ({FODA}) Feasibility Study},
+%	Year = 1990}
 
 @techreport{mcg01,
 	Author = {J.D. McGregor},
@@ -653,7 +653,7 @@ language={English}
 
 @inproceedings{ka07,
 	Author = {K. Czarnecki and A. Wasowski},
-	booktitle={11th International Software Product Line Conference, SPLC'07}, 
+	booktitle={11th International Software Product Line Conference, SPLC'07},
 	Pages = {23-34},
 	Publisher = {\ieee},
 	doi = {10.1109/SPLC.2007.19},	
@@ -770,7 +770,7 @@ language={English}
 	acmid = {321909},
 	publisher = {ACM},
 	address = {New York, NY, USA},
-} 
+}
 
 @article{BatoryBC06,
 	Author = {D. Batory and D. Benavides and A. Ruiz Cort{\'e}s},
@@ -955,16 +955,16 @@ language={English}
 	Title = {Formal Description of Variability in Product Families},
 	Year = {2011}}
 
-@article{acl13,
-	Author = {C. Andres and C. Camacho and L. Llana},
-	Journal = {Information and Software Technology},
-	Number = {11},
-	Pages = {1925-1947},
-	doi = {10.1016/j.infsof.2013.05.005},	
-	Publisher = {Elsevier},
-	Title = {A formal framework for software product lines},
-	Volume = {55},
-	Year = {2013}}
+%@article{acl13,
+%	Author = {C. Andres and C. Camacho and L. Llana},
+%	Journal = {Information and Software Technology},
+%	Number = {11},
+%	Pages = {1925-1947},
+%	doi = {10.1016/j.infsof.2013.05.005},	
+%	Publisher = {Elsevier},
+%	Title = {A formal framework for software product lines},
+%	Volume = {55},
+%	Year = {2013}}
 
 @article{clc16,
 	Author = {C. Camacho and L. Llana and A. N\'u{\~n}ez},
@@ -1076,7 +1076,7 @@ language={English}
 	publisher = {Springer-Verlag},
 	address = {Berlin, Heidelberg},
 	keywords = {COSMIC, Conceptual Models, Functional Size Measurement, Functional Size Procedures}
-	} 
+	}
 
 @article{hko13,
 	author = {Hussain, Ishrar and Kosseim, Leila and Ormandjieva, Olga},
@@ -1105,7 +1105,7 @@ language={English}
 	note = {AAINR78579},
 	school = {Ecole de Technologie Superieure (Canada)},
 	publisher = {Ecole de Technologie Superieure (Canada)}
-	} 
+	}
 
 @article{gd08,
 	author = {Gencel, Cigdem and Demirors, Onur},
@@ -1159,7 +1159,7 @@ language={English}
  	publisher = {Elsevier Science Inc.},
  	address = {New York, NY, USA},
  	keywords = {Effort estimation, Expert judgment, Project planning, Software development}
-} 
+}
 
 @inproceedings{n07,
     author = {Vu Nguyen and Sophia Deeds-rubin and Thomas Tan and Barry Boehm},
@@ -1183,7 +1183,7 @@ language={English}
  numpages = {29},
  publisher = {J. C. Baltzer AG, Science Publishers},
  address = {Red Bank, NJ, USA}
-} 
+}
 
 @book{kt98,
  author = {Keller, Gerhard and Teufel, Thomas},
@@ -1194,7 +1194,7 @@ language={English}
  edition = {1st},
  publisher = {Addison-Wesley Longman Publishing Co., Inc.},
  address = {Boston, MA, USA}
-} 
+}
 
 @article{w99,
     author = {W.M.P. van der Aalst},
@@ -1268,7 +1268,7 @@ pages={531-541}
  acmid = {1173968},
  publisher = {IEEE Computer Society},
  address = {Washington, DC, USA},
-} 
+}
 
 
 
@@ -1325,7 +1325,7 @@ pages={531-541}
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {OCL, UML, configuration, feature interaction, feature modeling, formal verification, metaprogramming, model templates, model-driven development, software-product lines},
-} 
+}
 
 @inproceedings{slkh07,
  author = {Satyananda, Tonny Kurniadi and Lee, Danhyung and Kang, Sungwon and Hashmi, Sajid Ibrahim},
@@ -1340,7 +1340,7 @@ pages={531-541}
  acmid = {1304672},
  publisher = {IEEE Computer Society},
  address = {Washington, DC, USA},
-} 
+}
 
 @article{akmrrs10,
  author = {Anquetil, Nicolas and Kulesza, Uir\'{a} and Mitschke, Ralf and Moreira, Ana and Royer, Jean-Claude and Rummler, Andreas and Sousa, Andr{\'e}},
@@ -1391,14 +1391,14 @@ pages={197-214},
 language={English}
 }
 
-@INPROCEEDINGS{j05, 
-	author={J. Hillston}, 
-	booktitle={20th Annual IEEE Symposium on Logic in Computer Science (LICS' 05)}, 
-	title={Process algebras for quantitative analysis}, 
-	year={2005}, 
-	pages={239-248}, 
-	doi={10.1109/LICS.2005.35}, 
-	ISSN={1043-6871}, 
+@INPROCEEDINGS{j05,
+	author={J. Hillston},
+	booktitle={20th Annual IEEE Symposium on Logic in Computer Science (LICS' 05)},
+	title={Process algebras for quantitative analysis},
+	year={2005},
+	pages={239-248},
+	doi={10.1109/LICS.2005.35},
+	ISSN={1043-6871},
 	month={June},
 	}
 
@@ -1453,7 +1453,3 @@ issn = "0890-5401",
 doi = "http://dx.doi.org/10.1006/inco.1995.1135",
 author = "J.C.M. Baeten and J.A. Bergstra and S.A. Smolka",
 }
-
-
-
-
