--- a/introduction.tex
+++ b/introduction.tex
@@ -278,7 +278,7 @@ sin calcular todos los productos.
 Para finalizar el capítulo, se muestran los resultados
 de la implementación en comparación
 con los resultados obtenidos previamente en
-los modelos no probabilísticos \cite{acl13, clc16}.
+los modelos no probabilísticos \cite{acl13,cln16}.
 
 
 
