--- a/abstract.tex
+++ b/abstract.tex
@@ -1,11 +1,14 @@
 \begin{abstract}
-  In this paper we introduce a probabilistic extension of our previous 
-  framework $\fodaPA$ for software product lines.
+In this paper we introduce a probabilistic extension of our previous
+work \fodaPA: a formal framework to specify and analyze software product lines.
+We will use probabilistic information to identify those features that are used more frequently by computing the probability of having a feature in a specific software product line.
+We redefine the syntax of \fodaPA\ to include probabilistic operators and define new operational and denotational semantics. We proof that the expected equivalence between these two semantic frameworks hold. 
+Our probabilistic framework is supported by a tool. We briefly comment on the characteristics of the tool and discuss the advantages of using probabilities to quantify the likelihood of having features in potential software product lines.
 \end{abstract}
 \textbf{Keywords;} Software Product Lines; Probabilistic Models; Formal Methods; Feature Models
 
 
-%%% Local Variables: 
+%%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "main"
-%%% End: 
+%%% End:
