--- a/macros.tex
+++ b/macros.tex
@@ -65,6 +65,7 @@
 \newcommand{\bex}{\begin{example}\begin{rm}}
 \newcommand{\eex}{\end{rm}$ $\qed  \end{example}}
 
+\newenvironment{defn}{\bdfn}{\edfn}
 
 \newcommand{\barra}{\:| \:}
 \def\y{\;\wedge\;}
@@ -223,7 +224,8 @@
 
 
 \newcommand{\product}[1]{\lfloor #1\rfloor}
-\newcommand{\waste}[1]{\ensuremath{\mathtt{waste}(#1)}}
+\newcommand{\waste}{\ensuremath{\mathtt{waste}}}
+\newcommand{\ham}{\ensuremath{\mathtt{waste}}}
 \newcommand{\nombreRegla}[1]{\ensuremath{\mathbf{[#1]}}}
 \newcommand{\tvacia}{\ensuremath{\epsilon}}
 \newcommand{\traces}[1]{\ensuremath{\mathtt{tr}(#1)}}
