--- a/main.tex
+++ b/main.tex
@@ -82,7 +82,7 @@
 
 
 
-\bibliographystyle{elsarticle-num}
+\bibliographystyle{splncs03}
 \bibliography{concu,concuPL}
 
 %\bibliographystyle{abbrv}
