--- a/macros.tex
+++ b/macros.tex
@@ -66,7 +66,7 @@
 \newcommand{\eex}{\end{rm}$ $\qed  \end{example}}
 
 \newenvironment{defn}{\bdfn}{\edfn}
-
+\newenvironment{proofappendix}[1]{\textbf{\emph{Proof of #1}}}{}
 \newcommand{\barra}{\:| \:}
 \def\y{\;\wedge\;}
 \def\o{\;\vee\;}
@@ -225,7 +225,7 @@
 
 \newcommand{\product}[1]{\lfloor #1\rfloor}
 \newcommand{\waste}{\ensuremath{\mathtt{waste}}}
-\newcommand{\ham}{\ensuremath{\mathtt{waste}}}
+\newcommand{\ham}{\ensuremath{\mathtt{ham}}}
 \newcommand{\nombreRegla}[1]{\ensuremath{\mathbf{[#1]}}}
 \newcommand{\tvacia}{\ensuremath{\epsilon}}
 \newcommand{\traces}[1]{\ensuremath{\mathtt{tr}(#1)}}
