--- a/main.tex
+++ b/main.tex
@@ -81,9 +81,9 @@
 \input{conclussions}
 
 
-
 \bibliographystyle{splncs03}
 \bibliography{concu,concuPL}
+\input{appendix}
 
 %\bibliographystyle{abbrv}
 
@@ -93,3 +93,4 @@
 %%% mode: latex
 %%% TeX-master: t
 %%% End:
+
