--- a/denotational.tex
+++ b/denotational.tex
@@ -3,6 +3,8 @@
 
 \begin{itemize}
 \item The model: products (set of features) with probability.
+\item Each product appears only onces
+\item The sum of all probabilities lies in $[0,1]$.
 \end{itemize}
 
 
@@ -21,7 +23,8 @@
 
 \begin{itemize}
 \item The multisets in will appear in the operational semantics.
-\item We need to convert these multisets into sets of the model.
+\item We need to convert these multisets into sets of the model. It is
+  possible if the conditions of Proposition~\ref{prop:pr:accum} hold.
 \end{itemize}
 
 \bdfn
@@ -36,123 +39,55 @@
 \eprop
 
 
-% \bdfn\label{def:pr:sum}
-% Dados los multiconjuntos:
-% \todo{Verificar agregada por carlos}
-
-% $M = \lbag (M_{1},m_{1}),\ldots,(M_{n},m_{n})\rbag, 0 \leq m_{1}\ldots m_{n} \leq 1, M_{1}\ldots M_{n} \subseteq \calP(\calF) $
-
-% $N = \lbag (N_{1},n_{1}),\ldots,(N_{n},n_{n})\rbag, 0 \leq n_{1}\ldots n_{n} \leq 1, N_{1}\ldots N_{n} \subseteq \calP(\calF) $
- 
-% se define $M \uplus N$ como:
-
-% $\lbag (M_{1},m_{1}),\ldots,(M_{n},m_{n}),(N_{1},n_{1}),\ldots,(N_{n},n_{n})\rbag$
-% \edfn
-
-% \bprop\label{prop:pr:sum}
-% \todo{Verificar agregada por carlos}
-% Dados los multiconjuntos $M\in\calM$ y $N\in\calM$ entonces $M \uplus N \in\calM$
-% \eprop
-
+\begin{itemize}
+\item Operators of the operational semantics.
+\end{itemize}
 
 
 \bdfn\label{def:semantic:operators}
 
-  \begin{itemize}
+  \begin{itemize}\mbox{ }
         
   \item $\semdenp{\nil}=\emptyset$
   
   \item $\semdenp{\checkmark}=\{(\emptyset,1)\}$
    
   \item 
-    $\semdenp{\feature{A};\cdot}:\calM\mapsto\calM$
-    como
-    $$\semdenp{\feature{A};\cdot}(M)= 
+    $\semdenp{\feature{A};\cdot}(M)= 
       \accum\bigl(\lbag(\{\feature{A}\}\cup P,p)\ |\ (P,p)\in M\rbag\bigr)
       % \accum\bigl(
       %    \{ (\{\feature{A}\} \cup P,p ) |\   (P,p) \in M\}\bigr)
-         $$
-  
-  Para el procesamiento de cualquier característica obligatoria
-  será procesada con probabilidad $p$ y esta será añadida
-  al multiconjunto de características procesadas previamente.
-  
-
-  \item 
-    $\semdenp{\ofeature{A};_{r}\cdot}:\calM\mapsto\calM$
-    como
-    $$\semdenp{\ofeature{A};_{r}\cdot}(M)=
-                \accum\bigl(\lbag(\emptyset , 1-r )\rbag\uplus\lbag (\{\feature{A}\}\cup P, r\cdot p ) \ |\ (P,p) \in M\rbag\bigr)$$
-
-  Al procesar una característica opcional deben realizarse
-  dos acciones. La primera es de no procesar la característica,
-  terminando el procesamiento del término con probabilidad $1-r$.
-  La segunda es de procesarla con probabilidad $r$ siendo esta
-  multiplicada por la probabilidad acumulada
-  del término restante. El resultado de ambas acciones es
-  unido usando el operador $\uplus$ y las probabilidades 
-  de cada conjunto sumadas utilizando la función $\accum(M)$.
+         $
   
   \item 
-    $\semdenp{\cdot\choice_{r}\cdot}:\calM\times\calM\mapsto\calM$
-    como 
-    $$\semdenp{\cdot\choice_{r}\cdot}(M_{1},M_{2})=\accum\bigl(\lbag(P,r\cdot p  ) \ |\ (P,p) \in
-    M_{1}\rbag \uplus \lbag(Q, (1-r)\cdot q  ) \ |\ (Q,q) \in M_{2}\rbag\bigr) $$
-\todo{Deberiamos intercambiar de lado la probabilidad r y 1-r por consistencia en este operador.}
-  Se crea un nuevo multiconjunto al procesar los términos (multiconjuntos) a cada
-  lado del operador de selección única, este, generará dos conjuntos dentro del
-  nuevo multiconjunto y sus probabilidades serán sumadas utilizando la función $\accum(M)$.
+    $\semdenp{\ofeature{A};_{r}\cdot}(M)=
+                \accum\bigl(\lbag(\emptyset , 1-r )\rbag\uplus\lbag (\{\feature{A}\}\cup P, r\cdot p ) \ |\ (P,p) \in M\rbag\bigr)$
 
   \item 
-    $\semdenp{\cdot\paral\cdot}:\calM\times\calM\mapsto\calM$
-    como 
-    $$
+    $\semdenp{\cdot\choice_{r}\cdot}(M_{1},M_{2})=\accum\bigl(\lbag(P,r\cdot p  ) \ |\ (P,p) \in
+    M_{1}\rbag \uplus \lbag(Q, (1-r)\cdot q  ) \ |\ (Q,q) \in M_{2}\rbag\bigr) $
+  \item 
+    $
         \semdenp{\cdot\paral\cdot}(M_{1},M_{2})= \accum\Bigl(
                 \lbag (P\cup Q, p\cdot q)  |\ (P,p) \in M_{1},\ (Q,q) \in M_{2}\rbag\Bigr)
-    $$
+    $
     
-  El operador de paralelo dentro de la semántica operacional unirá las características
-  de ambos términos multiplicando su probabilidad.
-     
   \item  
-    $\semdenp{\require{A}{B}{\cdot}}:\calM\mapsto\calM$
-    como 
-    $$\semdenp{\require{A}{B}{\cdot}}(M)=\accum\left(\begin{array}{l}
+    $\semdenp{\require{A}{B}{\cdot}}(M)=\accum\left(\begin{array}{l}
       \lbag\bigl(P,p\bigr)\ |\  (P,p)\in M, \feature{A}\not\in P\rbag\ \uplus\\
       \lbag\bigl(\{\feature{B}\}\cup P ,p\bigr)\ |\ (P,p)\in M, \feature{A}\in P\rbag \\ 
-      \end{array}\right)$$
+      \end{array}\right)$
 
-  La restricción de requerimiento no modifica las probabilidades de los productos en
-  construcción, sin embargo, si se cumple la restricción de requerimiento debe agregarse
-  la característica requerida en el producto y deben ser sumadas las probabilidades utilizando
-  los operadores $\uplus$ y $\accum(M)$.
-      
   \item  
-    $\semdenp{\exclude{A}{B}{\cdot}}:\calM\mapsto\calM$
-    como 
-    $$\semdenp{\exclude{A}{B}{\cdot}}(M)=\begin{array}[t]{l}
+    $\semdenp{\exclude{A}{B}{\cdot}}(M)=\begin{array}[t]{l}
       \{(P,p)\ |\ (P,p)\in M, \feature{A}\not\in P\}\cup\\
       \{(P,p)\ |\ (P,p)\in M, \feature{B}\not\in P\}
-      \end{array}$$
+      \end{array}$
 
-  Para el caso de la restricción de exclusión, si esta se cumple, se
-  procede a eliminar las características que estén referenciadas por
-  este operador y las probabilidades se mantienen inalteradas.
-  
-    \item $\semdenp{\mandatory{A}{\cdot}}:\calM\mapsto\calM$
-    como 
-    $$\semdenp{\mandatory{A}{\cdot}}(M) = \semdenp{\feature{A};{\cdot}}(M)
-    $$
+    \item $\semdenp{\mandatory{A}{\cdot}}(M) = \semdenp{\feature{A};{\cdot}}(M)$
 
-  El operador de inclusión se comporta de igual manera al operador de
-  obligatoriedad.
-  
-    \item   $\semdenp{\forbid{A}{\cdot}}:\calM\mapsto\calM$
-    como 
-    $$\semdenp{\forbid{A}{\cdot}}(M) = \{(P,p)\ |\ (P, p) \in M, \feature{A}\not\in P      \}$$
-
-  El operador de ocultamiento tiene el mismo comportamiento que el operador de
-  exclusión, con la diferencia que se aplica a una sola característica.
+    \item 
+      $\semdenp{\forbid{A}{\cdot}}(M) = \{(P,p)\ |\ (P, p) \in M, \feature{A}\not\in P      \}$
 
   \end{itemize}
 \edfn
@@ -179,160 +114,12 @@
   \end{itemize}
 
 
-\textit{Demostración.}
-La demostración de la proposición \ref{prp:domain:prob}
-permite comprobar que las operaciones sobre los multiconjuntos
-dentro de la semántica denotacional de \fodaPAp
-siempre tienen como resultado un único multiconjunto.
-%
-Para aquellos operadores que hagan uso de la función $\accum(M)$
-por la proposición \ref{prop:pr:accum} se cumple que $\accum(M)\in\calM$.
-De igual manera para los operadores que utilicen el 
-operador $\uplus$ por la proposición \ref{prop:pr:sum} se cumple que 
-$M \uplus N \in\calM$.
+  \begin{proof}
+    It is easy to check that all multisets appearing in
+    Definition~\ref{def:semantic:operators}
+    meet the conditions of Proposition~\ref{prp:domain:prob}.
+  \end{proof}
 \eprop
-
-Una vez definidos los operadores semánticos sobre un conjunto de productos,
-es posible definir la semántica denotacional para cualquier
-expresión $\fodaPA$.
-Esta es definida de manera inductiva.
-\bdfn
-  La semántica denotacional de $\fodaPA$ es representada por la función
-  $\semdenp{\cdot}:\fodaPA\rightarrow\calP(\calP(\calF))$ definida de manera inductiva
-  de la siguiente forma: para cualquier operador $n$-ario $\op\in\{\nil, \checkmark ,
-  \feature{A};\cdot, \ofeature{A};_{p}\cdot , \cdot\choice_{p}\cdot,
-  \cdot\paral\cdot, \require{A}{B}{\cdot},\exclude{A}{B}{\cdot},
-  \mandatory{A}{\cdot}, \forbid{A}{\cdot}\}$%
-\footnote{$\nil$ y $\checkmark$ son operadores 0-arios;
-  $\feature{A};\cdot$, $\ofeature{A};\cdot$
-  $\require{A}{B}{\cdot}$, $\exclude{A}{B}{\cdot}$,
-  $\mandatory{A}{\cdot}$, $\forbid{A}{\cdot}$ son operadores 1-arios;
-  $\cdot\choice_p\cdot$ y $\cdot\paral\cdot$ son operadores 2-arios.}:
-  $$\semdenp{\op(P_1,\ldots P_n)}=\semdenp{\op}(\semdenp{P_1},\ldots,\semdenp{P_n})$$
-\edfn
-
-
-
-En la figura \ref{example:denot:1} y en
-la figura \ref{example:denot:2} se describe
-el cálculo la semántica denotacional de 5 ejemplos,
-así permitir analizar el proceso de cálculo de 
-las probabilidades de las características dentro de
-términos a medida que son procesados, estos,
-viendo que el término es representado como un árbol,
-desde los elementos terminales u hojas hasta la raíz. 
-
-
-
-
-\begin{figure}[h]
-        \hrule
-        
-        \vspace*{1em}
-        
-        \centering $P_{1} = \feature{A};\ofeature{B};_{p}\checkmark$\review
-        
-        \scalebox{0.8}{$
-                \begin{array}{lll}
-                \semdenp{\checkmark} &=& \{(\emptyset,1)\}\\
-                \semdenp{\ofeature{B};_p\checkmark} &=&   \semdenp{\ofeature{B};_{p}\cdot}(\semdenp{\checkmark}) = 
-                \semdenp{\ofeature{B};_{p}\cdot}(\{(\emptyset,1)\})=\\
-                &&\{(\emptyset,(1-p)),(\feature{B},p)\}\\
-                \semdenp{\feature{A};\ofeature{B};_p\checkmark} &=& \semdenp{\feature{A};\cdot}(\semdenp{\ofeature{B};_p\checkmark})=
-                \semdenp{\feature{A};\cdot}(\{(\emptyset,(1-p)),(\feature{B},p)\})=\\
-                &&\{(\feature{A},(1-p)),(\feature{A}\feature{B},p)\}
-                \end{array}
-                $}
-        
-        \vspace*{1em} \hrule\vspace*{1em}
-        
-        
-        \centering 
-        $P_{2} = \feature{A};(\ofeature{B};_{p}\checkmark \choice_{q} \ofeature{B};_{r}\checkmark)$ \review
-        
-        %\feature{A};(\ofeature{B};_{p}\checkmark \choice_{q} \ofeature{B};_{r}\checkmark)
-        \scalebox{0.8}{$
-                \begin{array}{lll}
-                \semdenp{\checkmark} &=& \{(\emptyset,1)\}\\
-                \semdenp{\ofeature{B};_{\frac{1}{3}}\checkmark} &=&   \semdenp{\ofeature{B};_{\frac{1}{3}}\cdot}(\semdenp{\checkmark}) = 
-                \semdenp{\ofeature{B};_{\frac{1}{3}}\cdot}(\{(\emptyset,1)\})=\\
-                &&\{(\emptyset,\frac{2}{3}),(\feature{B},\frac{1}{3})\}\\
-                \semdenp{\ofeature{B};_{\frac{1}{3}}\checkmark \choice_{\frac{1}{2}} \ofeature{B};_{\frac{1}{3}}\checkmark} &=&
-                \semdenp{\cdot  \choice_{\frac{1}{2}} \cdot}(\semdenp{\ofeature{B};_{\frac{1}{3}}\checkmark},\semdenp{\ofeature{B};_{\frac{1}{3}}\checkmark)}\\
-                &=&
-                \semdenp{\cdot  \choice_{\frac{1}{2}} \cdot}(\{(\emptyset,\frac{2}{3}),(\feature{B},\frac{1}{3})\}, \{(\emptyset,\frac{2}{3}),(\feature{B},\frac{1}{3})\}) =\\
-                &=&     
-                \accum\Bigl(\bigl\{(\emptyset,\frac{2}{6}),(\feature{B},\frac{1}{6})\bigr\}  \uplus \bigl\{(\emptyset,\frac{2}{6}),(\feature{B},\frac{1}{6})\bigr\}\Bigr)=\\
-                &=&\bigl\{(\emptyset,\frac{2}{3}),(\feature{B},\frac{1}{3})\bigr\}
-                \end{array}
-                $}
-        
-        \vspace*{1em} \hrule\vspace*{1em}
-        
-        $P_{3} = \feature{A};(\feature{A};\checkmark\choice_{q} \feature{B};\checkmark)$\review
-        
-        %$\feature{A};(\feature{A};\checkmark\choice_{q} \feature{B};\checkmark)$
-        \scalebox{0.8}{$
-                \begin{array}{lll}
-                \semdenp{\checkmark} &=& \{(\emptyset,1)\}\\
-                \semdenp{\feature{A};\checkmark} &=& \semdenp{\feature{A};\cdot}(\semdenp{\checkmark})=
-                \semdenp{\feature{A};\cdot}(\{(\emptyset,1)\})=\{(\feature{A},1)\}\\
-                \semdenp{\feature{A};\checkmark\choice_{q} \feature{B};\checkmark} &=&
-                \semdenp{\cdot \choice_{q} \cdot} (\semdenp{\feature{A};\checkmark},\semdenp{\feature{B};\checkmark})=\\
-                &=& \semdenp{\cdot \choice_{q} \cdot} (\{(\feature{A},1)\},\{(\feature{B},1)\}) = \{(\feature{A},q),(\feature{B},(1-q))\}\\
-                \semdenp{\feature{A};(\feature{A};\checkmark\choice_{q} \feature{B};\checkmark)} &=&
-                \semdenp{\feature{A};\cdot}(\semdenp{\feature{A};\checkmark\choice_{q} \feature{B};\checkmark})=\\
-                &=& \semdenp{\feature{A};\cdot}(\{(\feature{A},q),(\feature{B},(1-q))\}) = \{(\feature{A},q),(\feature{A}\feature{B},(1-q))\}
-                \end{array}
-                $}
-        \vspace*{1em}
-        
-        \hrule
-        
-        \caption{Ejemplo de la ejecución de las reglas de la semántica denotacional (1/2).\label{example:denot:1}}
-\end{figure}
-
-
-\begin{figure}[h]
-        \hrule
-        \vspace*{1em}
-        
-        \centering $P_{4} = (\feature{A};\checkmark \choice_{p} \feature{B};\nil)$\review
-        
-        %(\feature{A};\checkmark \choice_{p} \feature{B};\nil)
-        \scalebox{0.8}{$
-                \begin{array}{lll}
-                \semdenp{\nil} &=& \emptyset\\
-                \semdenp{\feature{B};\nil} &=& \semdenp{\feature{B};\cdot}(\semdenp{\nil}) =\semdenp{\feature{B};\cdot}(\emptyset)= \emptyset\\
-                \semdenp{\checkmark} &=& \{(\emptyset,1)\}\\
-                \semdenp{\feature{A};\checkmark} &=& \semdenp{\feature{A};\cdot}(\semdenp{\checkmark})=
-                \semdenp{\feature{A};\cdot}(\{(\emptyset,1)\})=\{(\feature{A},1)\}\\
-                \semdenp{\feature{A};\checkmark \choice_{\frac{1}{7}} \feature{B};\nil} &=& 
-                \semdenp{\cdot \choice_{\frac{1}{7}} \cdot}(\semdenp{\feature{A};\checkmark},\semdenp{\feature{B};\nil})\\
-                &=&\semdenp{\cdot \choice_{\frac{1}{7}} \cdot}(\{(\feature{A},1)\},\emptyset)= \{(\feature{A},\frac{1}{7})\}
-                \end{array}
-                $}
-        
-        \vspace*{1em} \hrule\vspace*{1em}
-        \centering $P_{5} = (\feature{A};\checkmark \paral \feature{B};\checkmark)$\review
-        
-        %$(\feature{A};\checkmark \paral \feature{B};\checkmark)$
-        \scalebox{0.8}{$
-                \begin{array}{lll}
-                \semdenp{\checkmark} &=& \{(\emptyset,1)\}\\
-                \semdenp{\feature{A};\checkmark} &=& \semdenp{\feature{A};\cdot}(\semdenp{\checkmark})=
-                \semdenp{\feature{A};\cdot}(\{(\emptyset,1)\})=\{(\feature{A},1)\}\\
-                \semdenp{\feature{A};\checkmark \paral \feature{B};\checkmark} &=& 
-                \semdenp{\cdot \paral \cdot}(\semdenp{\feature{A};\checkmark},\semdenp{\feature{B};\checkmark})=
-                \semdenp{\cdot \paral \cdot}(\{(\feature{A},1)\},\{(\feature{B},1)\})=\\
-                && \{(\feature{A}\feature{B},\frac{1}{2}),(\feature{B}\feature{A},\frac{1}{2})\}\\
-                \end{array}
-                $}
-        \vspace*{1em} \hrule
-        
-        
-        \caption{Ejemplo de la ejecución de las reglas de la semántica denotacional (2/2).\label{example:denot:2}}
-\end{figure}
 
 
 
