--- a/equivalence.tex
+++ b/equivalence.tex
@@ -1,393 +1,92 @@
-\section{Relaciones de equivalencia}\label{sec:equivalence}
-Esta sección muestra las relaciones de equivalencia
-entre la semántica operacional y la semántica denotacional.
+\section{Equivalence between the operational and denotational semantics}\label{sec:equivalence}
+
+\begin{itemize}
+\item We prove the equivalence of the operational semantics and
+  denotational semantics.
+\item The proofs are in the appendix
+\end{itemize}
 
 \bprop\label{prop:pref}
-  Dado el término $P\in\fodaPAp$ y la característica $\feature{A}\in\calF$, 
-  entonces $(pr,p)\in\prodp(\feature{A};P)$ si y sólo si
-  $$p=\sum\lbag r\ |\ (pr',r)\in\prodp(P) \y pr'\cup\{\feature{A}\} = pr\rbag$$
-  \textit{Demostración.}
-    La otra transición de $\feature{A};P$ es  $\feature{A};P\tranp{\feature{A}}{1}Q$.
-    Entonces $\feature{A};P\vtranp{s}{p}P$ si y sólo si
-    \begin{displaymath}
-      \feature{A};P\tranp{\feature{A}}{1}P\vtranp{s}{p}Q\quad\y\quad s=\feature{A}\cdot s'
-    \end{displaymath}
-    Entonces
-    \begin{equation*}
-      \begin{split}
-        p = \sum\lbag r \ |\ \feature{A};P\vtranp{s\checkmark}{p} \nil \y \product{s}=pr \ \rbag =\\
-          \sum\lbag r\ |\ \feature{A};P\tranp{\feature{A}}{1}P\vtranp{s'\checkmark}{r}\nil\y \product{\feature{A}\cdot s'}=pr\rbag\\
-          \sum\lbag r\ |\ P\vtranp{s'\checkmark}{r}\nil\y \{\feature{A}\}\cup \product{s'}=pr\rbag\\
-          \sum\lbag r\ |\ (pr',r)\in\prodp(P)\y \{\feature{A}\}\cup pr'=pr\rbag
-      \end{split}
-    \end{equation*}
-\eprop
-
-\bcor\label{cor:pref}
   Dado el término $P\in\fodaPAp$, y la característica $\feature{A}\in\calF$, entonces
   $$\prodp(\feature{A};P)=\semdenp{\feature{A};\cdot}(\prodp(P))$$
-  \textit{Demostración.}
-    Esto es consecuencia de la proposición~\ref{prop:pref}.
-
-\ecor
-
-\bprop\label{prop:prefopt}
-  Dado el término $P\in\fodaPAp$, la característica $\feature{A}\in\calF$, y la probabilidad $q\in (0,1)$, 
-  entonces $(pr,p)\in\prodp(\ofeature{A};_qP)$ si y sólo si $(pr,p)=(\emptyset,1-q)$ o
-  $$p=q\cdot \sum\{r\ |\ (pr',r)\in\prodp(P) \y pr'\cup\{\feature{A}\} = pr\}$$
-  \bprf
-    Existen dos transiciones para $\ofeature{A};_qP$: $\ofeature{A};_qP\tranp{\feature{A}}{q} P$ y
-     $\ofeature{A};_qP\tranp{\checkmark}{1-q}\nil$. Por lo tanto si $\ofeature{A};_qP\vtranp{s}{r}Q$ entonces
-     \begin{itemize}
-     \item $s=\checkmark$ y $r=1-q$, o
-     \item $s=\feature{A}\cdot s'$, $P\vtranp{s}{r'}Q$, y $r=q\cdot r'$.
-     \end{itemize}
-     Además, si $pr=\product{\feature{A}\cdot s'}$ entonces
-     $pr\neq\emptyset$. Por lo tanto 
-     $(\emptyset,1-q)\in\prodp(\ofeature{A};_qP)$. Ahora suponemos 
-     $pr\neq\emptyset$, entonces $(pr,p)\in\prodp(\ofeature{A};_qP)$ si y sólo si
-     \begin{equation*}
-       \begin{split}
-         d = \sum\lbag r\ |\ \ofeature{A};_qP\vtran{s\checkmark}\nil\y \product{s}=pr\rbag=\\
-         \sum\lbag r\ |\ \ofeature{A};_qP\tranp{\feature{A}}{q}P\vtranp{s'\checkmark}{r'}\nil\y \product{\feature{A}\cdot s'}=pr\y r=q\cdot r'\rbag=\\
-         \sum\lbag r\ |\ P\vtranp{s'\checkmark}{r'}\nil\y \{\feature{A}\}\cup\product{s'}=pr\y r=q\cdot r'\rbag=\\
-         \sum\lbag r\ |\ (pr',r')\in\prodp(P)\y \{\feature{A}\}\cup pr'=pr\y r=q\cdot r'\rbag=\\
-         q\cdot\sum\lbag r'\ |\ (pr',r')\in\prodp(P)\y \{\feature{A}\}\cup pr'=pr\rbag
-       \end{split}
-     \end{equation*}
-  \eprf
+\begin{proof}
+  This proposition is an inmmediate consequence of
+  Lemma~\ref{lem:pref} in the Appendix~\ref{app:proofs}
+\end{proof}
 \eprop
 
-\bcor\label{cor:prefopt}
+
+\bprop\label{prop:prefopt}
   Dado el término $P\in\fodaPAp$, la característica $\feature{A}\in\calF$ y la probabilidad $q\in (0,1)$, entonces
   $$\prodp(\ofeature{A};_qP)=\semdenp{\ofeature{A};_q\cdot}(\prodp(P))$$
   \bprf
     Esto es consecuencia de la proposición~\ref{prop:prefopt}.
   \eprf
-\ecor
+\begin{proof}
+  This proposition is an inmmediate consequence of
+  Lemma~\ref{lem:prefopt} in the Appendix~\ref{app:proofs}
+\end{proof}
+\eprop
 
-\blem\label{lem:choice}
- Dados los términos $P,Q\in\fodaPAp$, y la probabilidad $q\in (0,1)$, entonces 
- $P\choice_q Q\vtranp{s}{r} R$ si y sólo si
- \begin{itemize}
- \item $P\vtranp{s}{r'} R$ y $r=q\cdot r'$, o
- \item $Q\vtranp{s}{r'} R$ y $r=(1-q)\cdot r'$
- \end{itemize}
- \bprf
-   Este lema es consecuencia de las reglas~\nombreRegla{cho1} y~\nombreRegla{cho2} de la semántica operacional.
- \eprf
-\elem
 
 \bprop\label{prop:choice}
   Dados los términos $P,Q\in\fodaPAp$, y la probabilidad $q\in (0,1)$, entonces
-  $(pr,p)\in\prodp(P\choice_q Q)$ si y sólo si
-  \begin{equation*}
-    \begin{split}
-      p = \left(q\cdot\sum\{r\ |\ (pr,r)\in\prodp(P) \}\right) +
-      \left((1-q)\cdot\sum\{r\ |\ (pr,r)\in\prodp(Q)\}\right)
-    \end{split}
-  \end{equation*}
-  \textit{Demostración.}
-  
-    $(pr,p)\in\prodp(P\choice_q Q)$ si y sólo si
-    \begin{equation*}
-      \begin{split}
-        p = \sum\lbag  r\ |\ P\choice_q Q\vtran{s\checkmark}_{r}\nil\rbag=\\
-        \sum\lbag  r\ |\ (P\vtran{s\checkmark}_{r'}\nil\y r=q\cdot r')\o
-        (Q\vtran{s\checkmark}_{r'}\nil\y r=(1-q)\cdot r')
-        \rbag=\\
-        \sum\lbag  r\ |\ P\vtran{s\checkmark}_{r'}\nil\y r=q\cdot r'\rbag + 
-        \sum\lbag  r\ |\ Q\vtran{s\checkmark}_{r'}\nil\y r=(1-q)\cdot r' \rbag=\\
-        q\cdot\sum\lbag  r\ |\ P\vtran{s\checkmark}_{r}\nil\rbag + 
-        (1-q)\cdot\sum\lbag  r\ |\ Q\vtran{s\checkmark}_{r}\nil\rbag=\\
-        q\cdot\sum\lbag  r\ |\ (pr,r)\in\prodp(P)\rbag + 
-        (1-q)\cdot\sum\lbag  r\ |\ (pr,r)\in\prodp(Q)\rbag
-      \end{split}      
-    \end{equation*}
-
-\eprop
-
-\bcor\label{cor:choice}
-  Dados los términos $P,Q\in\fodaPAp$, y la probabilidad $q\in (0,1)$, entonces
   $$\prodp(P\choice_q Q)=\semdenp{\cdot\choice_q\cdot}\bigl(\prodp(P),\prodp(Q)\bigr)$$
-  \textit{Demostración.}
-    Es consecuencia de la proposición~\ref{prop:choice}.
-\ecor
-
-\bdfn
-  Dadas las trazas $s,s'\in\calF^*$, se denota el conjunto de trazas obtenidas de
-  alternar $s$ y $s'$ por $\inter(s,s')$.
-\edfn
-
-\bprop\label{prop:paral1}
-  Dados los términos $P,Q\in\fodaPAp$, las probabilidades $p,q\in (0,1)$y las trazas $s,s'\in\calF^*$ 
-  tal que $p=\sum\lbag p'\ |\ P\vtranp{s\checkmark}{p'}\nil\rbag$ y 
-  $q=\sum\lbag q'\| |\ Q\vtranp{s'}{q'}\nil\rbag$
-  Entonces
-  $$p\cdot q = \sum\lbag r\ |\ P\paral Q\vtranp{s''\checkmark}{r}\nil\y s''\in\inter(s,s)\rbag$$
-  \textit{Demostración.}
-    Por inducción de $|s|+|s'|$.
-    \begin{description}
-    \item[$|s|+|s'|=0$] Desde 
-      $P\paral Q\tranp{\checkmark}{r}\nil$
-      si y sólo si $P\tranp{\checkmark}{r_1}\nil$,
-      $Q\tranp{\checkmark}{r_2}\nil$, y $r=r_1\cdot r_2$,
-      se sostiene lo siguiente:
-      \begin{equation}
-        \label{eq:paral1}
-        \begin{split}
-          \sum \lbag r\ |\ P\paral Q\tranp{\checkmark}{r}\nil \rbag =\\
-          \sum \lbag r\ |\ P\tranp{\checkmark}{r_1}\nil\y Q\tranp{\checkmark}{r_2}\nil\y r=r_1\cdot r_2 \rbag=\\
-          \sum \lbag  r_1\cdot r_2 \ |\ P\tranp{\checkmark}{r_1}\nil\y Q\tranp{\checkmark}{r_2}\nil \rbag= \\
-          \sum \scaleleftright{\lbag}{r_1 \cdot \left(\sum \lbag r_2\ |\ Q\tranp{\checkmark}{r_2}\nil \rbag\right)\ \vstretch{2}{|}\  P\tranp{\checkmark}{r_1}\nil}{\rbag} = \\
-          \sum \lbag  r_1 \cdot q |\  P\tranp{\checkmark}{r_1}\nil\rbag = q\cdot \sum \lbag  r_1  |\  P\tranp{\checkmark}{r_1}\nil\rbag = q\cdot p
-        \end{split}
-      \end{equation}
-    \item[$|s|+|s'|>0$] Supóngase que  $|s|>0$ (para el caso cuando $|s'|>0$
-      es simétrico). Consideremos que $s=\feature{A}\cdot s_1$.
-      Ahora consideremos el multiconjunto 
-      $\calP=\lbag P'\ |\ P\tranp{\f{A}}{r'} P'\vtranp{s_1\checkmark}{p'}\nil\rbag$ y dado $r_1 = \sum\lbag r\ |\ P\tranp{\f{A}}{r} P'\y P'\in\calP\rbag$ y
-      $p_1=\sum\lbag r\ |\ P'\vtranp{s_1\checkmark}{r}\nil\y P'\in\calP\rbag$. Es facil verificar que $p=r_1\cdot p_1$:
-      \begin{equation}
-        \label{eq:paral2}
-        \begin{split}
-          p = \sum\lbag  r\ |\ P\vtranp{s\checkmark}{r}\nil \rbag =  \\
-          \sum\lbag  r'\cdot p'\ |\  P\tranp{\f{A}}{r'} P'\vtranp{s_1\checkmark}{p'}\nil \rbag =\\
-          \sum\scaleleftright{\lbag}{r'\cdot\underbrace{\left(\sum\lbag p'\ |\ P'\vtranp{s_1\checkmark}{p'}\nil\rbag\right)}_{p_1}\ \vstretch{2}{|}\  P\tranp{\f{A}}{r'} P'\y P'\in\calP}{\rbag} =\\
-          p_1\cdot\sum\lbag  r'\ |\  P\tranp{\f{A}}{r'} P'\y P'\in\calP \rbag = r_1\cdot p_1
-        \end{split}
-      \end{equation}
-      Para cualquier $P'\in\calP$, y luego por la hipótesis de inducción obtenemos
-      $$
-      p'\cdot q =\sum\lbag r\ |\ P'\paral Q\vtranp{s''\checkmark}{r}\y s''\in\inter(s_1,s')\rbag
-      $$
-      Por lo tanto
-      \begin{equation}
-        \label{eq:paral3}
-        \begin{split}
-          \sum\lbag r\ |\ P'\in\calP \y P'\paral Q\vtranp{s''\checkmark}{r}\y s''\in\inter(s_1,s')\rbag = \\
-          \sum\lbag p'\cdot q\ |\  P'\in\calP\y P'\vtranp{s_1\checkmark}{p'}\nil\y s''\in\inter(s_1,s')\rbag\\
-          q\cdot \sum\lbag r\ |\ P'\vtranp{s_1\checkmark}\nil\y P'\in\calP\rbag=p_1\cdot q
-        \end{split}
-      \end{equation}
-      Entonces para cualquier $P'\in\calP$ se obtiene $P\paral Q\vtranp{s''\checkmark}{r}\nil$
-      donde $P\tranp{\f{A}}{r'}P'$, $r=\frac{r'}{2}\cdot p'\cdot q$ y $s''$
-      es la alternación de $s$ y $s'$. Por lo tanto
-      \begin{equation}
-        \label{eq:paral4}
-        \begin{split}
-          \sum\lbag  r\ |\ P\paral Q\tranp{\f{A}}{\frac{r_1}{2}}P'\paral Q\vtranp{s''\checkmark}{r_2}\nil\y P'\tranp{\f{A}}{r_1}P' \y \\ r=\frac{r_1}{2}\cdot r_1\y s''\in\inter(s_1,s') \rbag = \\
-          \sum\scaleleftright{\lbag}{\frac{r'}{2}\cdot r'' \  \vstretch{2}{|}\ P\tranp{\f{A}}{r'}P'\y P'\paral Q\vtranp{s''\checkmark}{r''}\nil\y s''\in\inter(s_1,s') }{\rbag} = \\
-          \sum\scaleleftright{\lbag}{  \frac{r'}{2}\cdot\left(\underbrace{\sum \scaleleftright{\lbag}{ r''\ \vstretch{4}{|}\
-                  \begin{split}
-                    P'\paral Q\vtranp{s''\checkmark}{r''}\nil\y \\s''\in\inter(s_1,s')
-                  \end{split}}{\rbag}}_{\mathrm{hip\acute{o}tesis\ de\ inducci\acute{o}n:}\ p_1\cdot q} \right) \ \vstretch{4}{|}\ 
-            P\tranp{\f{A}}{r'}P'\y P'\in\calP  }{\rbag} = \\
-          \sum\scaleleftright{\lbag}{  \frac{r'}{2}\cdot (p_1\cdot q) \  \vstretch{2}{|}\ P\tranp{\f{A}}{r'}P' \y P'\in\calP   }{\rbag} = \\
-          \frac{(p_1\cdot q)}{2}\cdot  \sum\lbag  r'\ |\ P\tranp{\f{A}}{r'}P' \y P'\in\calP  \rbag = \\
-          \frac{1}{2}(p_1\cdot q\cdot r_1)=\frac{1}{2}(p\cdot q)
-        \end{split}
-      \end{equation}
-      La ecuación \ref{eq:paral4} agrupa todas las probabilidades de alternar $s$ y $s'$ donde
-      la primera acción de $s$ se dá en primer lugar. Luego se tiene que agrupar la información probabilística
-      cuando la primera acción de $s'$ ocurre en primer lugar.
-       
-      Existen dos posibilidades, si esas acciones existen o no.
-      Dependiendo de $s'$ se obtienen las siguientes posibilidades.
-      \begin{description}
-      \item[$|s'|=0$] 
-        En este case tenemos $q=\sum\lbag q'\ |\ Q\tranp{\checkmark}{q'}\nil \rbag$,
-        Si $Q\tranp{\checkmark}{q'}\nil$, al aplicar
-        la regla $\nombreRegla{con4}$ y así obtener
-        $P\paral Q\tranp{\f{A}}{\frac{r'\cdot q'}{2}} P_1$. 
-        En este caso se obtiene
-        \begin{equation}
-          \label{eq:paral5}
-          \begin{split}
-            \sum\lbag  r\ |\  P\paral Q\tranp{\f{A}}{\frac{q'\cdot r'}{2}} P'\vtranp{s_1\checkmark}{p'}\nil\y r=p'\cdot \frac{q'\cdot r'}{2}\rbag=\\
-            \sum\lbag \frac{1}{2}(p'\cdot r'\cdot q' \ |\  P\paral Q\tranp{\f{A}}{\frac{q'\cdot r'}{2}} P'\vtranp{s_1\checkmark}{p'}\nil \rbag=\\
-            \sum\lbag \frac{1}{2}(p'\cdot r'\cdot (\underbrace{\sum\lbag q'\ |\ Q\tranp{\checkmark}{q'}\nil \rbag}_{q}) \ |\  P\tranp{\f{A}}{r'}P'\y P'\vtranp{s_1\checkmark}{p'}\nil \rbag=\\
-            \frac{q}{2}\cdot \sum\lbag r'\cdot (\underbrace{\sum\lbag p'\ |\ P'\vtranp{s_1\checkmark}{p'}\nil \rbag}_{p_1}) \ |\  P\tranp{\f{A}}{r'}P'\y P'\in\calP \rbag=\\
-            \frac{1}{2}(q\cdot p_1)\cdot(\underbrace{\sum\lbag r'\ |\ P\tranp{\f{A}}{r'}P'\y P'\in\calP \rbag}_{r_1})=\frac{1}{2}(q\cdot p_1\cdot r_1)=\frac{1}{2}(q\cdot p)
-          \end{split}
-        \end{equation}
-        La única transición de $P\paral Q$ que permite alternar $s$ y $s'$ son de la forma
-        \begin{enumerate}
-        \item $P\paral Q\tranp{\f{A}}{\frac{r'}{2}} P'\paral Q\vtranp{s''\checkmark}{p'}\nil $ como se indica arriba, o
-        \item $P\paral Q\tranp{\f{A}}{\frac{q'\cdot r'}{2}} P'\vtranp{s''\checkmark}{p'}\nil $.
-        \end{enumerate}
-        Por lo tanto
-        \begin{equation}
-          \begin{split}
-            \label{eq:paral5}
-            \sum\lbag  r\ |\  P\paral Q\vtran{s\checkmark}\nil\rbag =\\
-            \sum\lbag  r\ |\ P\paral Q\tranp{\f{A}}{\frac{r_1}{2}}P'\paral Q\vtranp{s''\checkmark}{r_2}\nil\y P'\tranp{\f{A}}{r_1}P' \y \\ r=\frac{r_1}{2}\cdot r_1\y s''\in\inter(s_1,s') \rbag +\\
-            \sum\lbag  r\ |\  P\paral Q\tranp{\f{A}}{\frac{q'\cdot r'}{2}} P'\vtranp{s_1\checkmark}{p'}\nil\y r=p'\cdot \frac{q'\cdot r'}{2}\rbag=\\
-            \frac{1}{2}(p\cdot q) + \frac{1}{2}(p\cdot q)= p\cdot q
-          \end{split}
-        \end{equation}
-       \item[$|s'|>0$] Consideremos $s'=\f{B}\cdot s_2$. 
-        En este caso se consideran las alternaciones donde
-        $Q$ produce la característica $\f{B}$ en primer lugar, lo que es,
-        que primero se aplica la regla~\nombreRegla{con2}. Considerando el
-        multiconjunto $\calQ=\lbag Q'\ |\ Q\tranp{\f{B}}{r}Q'\vtranp{s_2\checkmark}{q'}\nil]$, y dado
-        $r_2=\sum\lbag r\ |\ Q\tranp{\f{B}}{r}Q'\y Q'\in\calQ\rbag$ y $q_1=\sum\lbag r\ |\ Q'\vtranp{s_2\checkmark}{r}\nil\y Q'\in\calQ\rbag$.
-        Con un razonamiento similar al de las ecuaciones~\eqref{eq:paral1} y~\eqref{eq:paral2} se obtiene que $q=r_2\cdot q_1$ y
-        \begin{equation}
-          \label{eq:paral6}
-          \begin{split}
-            \sum\lbag  r\ |\ P\paral Q\tranp{\f{B}}{\frac{r_1}{2}}P\paral Q'\vtranp{s''\checkmark}{r_2}\nil\y\\ r=\frac{r_1}{2}\cdot r_1\y s''\in\inter(s,s_2) \rbag = \frac{1}{2}(p\cdot q)
-          \end{split}
-        \end{equation}
-        La única transición de $P\paral Q$ que implique alternar $s$ y $s'$ son de la forma:
-        \begin{enumerate}
-        \item $P\paral Q\tranp{\f{A}}{p'}{\frac{r}{2}} P'\paral Q\vtranp{s''\checkmark}{p'}\nil $ donde $s''$ es una alternación de $s_1$ y $s'$, o
-        \item $P\paral Q\tranp{\f{B}}{q'}{\frac{r}{2}} P\paral Q'\vtranp{s''\checkmark}{p'}\nil $ donde $s''$ es una alternación de $s$ y $s_2$, 
-        \end{enumerate}        
-        Por lo tanto,
-        \begin{equation}
-          \label{eq:paral7}
-          \begin{split}
-            \sum\lbag  r\ |\  P\paral Q\vtran{s\checkmark}\nil\rbag =\\
-            \sum\lbag  r\ |\ P\paral Q\tranp{\f{A}}{\frac{r_1}{2}}P'\paral Q\vtranp{s''\checkmark}{r_2}\nil\y P'\tranp{\f{A}}{r_1}P' \y\\ r=\frac{r_1}{2}\cdot r_1\y s''\in\inter(s_1,s') \rbag + \\
-            \sum\lbag  r\ |\ P\paral Q\tranp{\f{B}}{\frac{r_1}{2}}P\paral Q'\vtranp{s''\checkmark}{r_2}\nil\y Q'\tranp{\f{B}}{r_1}Q' \y\\ r=\frac{r_1}{2}\cdot r_1\y s''\in\inter(s,s_2) \rbag = \\
-            \frac{1}{2}(p\cdot q) + \frac{1}{2}(p\cdot q)= p\cdot q
-          \end{split}
-        \end{equation}
-      \end{description}
-    \end{description}
+\begin{proof}
+  This proposition is an inmmediate consequence of
+  Lemma~\ref{lem:choice} in the Appendix~\ref{app:proofs}
+\end{proof}
 \eprop
 
-\bcor\label{cor:paral}
+
+\bprop\label{prop:paral}
   Dados los términos $P,Q\in\fodaPAp$, y la probabilidad $q\in (0,1)$, entonces
   $$\prodp(P\paral Q)=\semdenp{\cdot\paral\cdot}\bigl(\prodp(P),\prodp(Q)\bigr)$$
-  \textit{Demostración.}
-    Este corolario es una consecuencia directa de la proposición~\ref{prop:paral1} y la definición~\ref{def:semantic:operators}.
-
-\ecor
+\begin{proof}
+  This proposition is an inmmediate consequence of
+  Lemma~\ref{lem:paral} in the Appendix~\ref{app:proofs}
+\end{proof}
+\eprop
 
 \bprop\label{prop:mand}
-  Dado el término  $P\in\fodaPAp$ y la característica $\feature{A}\in\calF$, $P\vtranp{s\checkmark}{p}\nil$.
-  \begin{enumerate}
-  \item $\f{A}\in s$ si y sólo si $\mandatory{A}{P}\vtranp{s\checkmark}{p}\nil$.
-  \item $\f{A}\not\in s$ si y sólo si $\mandatory{A}{P}\vtranp{s\f{A}\checkmark}{p}\nil$.
-  \end{enumerate}
-  \textit{Demostración.}
-    En ambos casos la demostración se realiza por inducción de la longitud de $|s|$.
-    \lcomen{I think it is trivial, is it necessary to write it in detail.}
-\eprop
-
-\bcor\label{cor:mand}
   Dado el término   $P\in\fodaPAp$  y la característica  $\feature{A}\in\calF$, entonces $(pr,p)\in$ si y sólo si
   $$\prodp(\mandatory{A}{P})=\semdenp{\mandatory{A}{\cdot}}(\prodp(P))$$
-  \textit{Demostración.}
-    Este corolario es una consecuencia directa de la proposición~\ref{prop:mand} y la definición~\ref{def:semantic:operators}.
-\ecor
-
-\bprop\label{prop:forb}
-  Dado el término  $P\in\fodaPAp$, la característica $\feature{A}\in\calF$, la traza $s\in\calF^*$ y la probabilidad
-  $p\in(0,1)$. $P\vtranp{s\checkmark}{p}\nil$, si y sólo si
-  $\forbid{P}{A}\vtranp{s\checkmark}{p}\nil$ y $\f{A}\not\in s$.
-  \textit{Demostración.}
-    La demostración es simple por inducción de la longitud de $s$.
-
+\begin{proof}
+  This proposition is an inmmediate consequence of
+  Lemma~\ref{lem:mand} in the Appendix~\ref{app:proofs}
+\end{proof}
 \eprop
 
-\bcor\label{cor:forb}
+\bprop\label{cor:forb}
   Dado el término $P\in\fodaPAp$ y la característica $\feature{A}\in\calF$, entonces 
   $$\prodp(\forbid{A}{P})=\semdenp{\forbid{A}{\cdot}}(\prodp(P))$$
-  \textit{Demostración.}
-    Este corolario es una consecuencia directa de la proposición~\ref{prop:forb} y la definición~\ref{def:semantic:operators}.
-\ecor
-
-\bprop\label{prop:req}
-  Dado el término  $P\in\fodaPAp$, las características $\feature{A},\feature{B}\in\calF$, la traza $s\in\calF^*$
-  y la probabilidad $p\in(0,1)$. Entonces $P\vtranp{s\checkmark}{p}\nil$ si y sólo si
-  $\require{A}{B}{P}\vtranp{s'\checkmark}p\nil$ y 
-  $s'$ y tiene alguna de las siguientes formas:
-  $\f{A}\not\in s$ y $s'=s$, $\f{B}\in s$ y $s'=s$, o
-  $\f{A}\in s$, $\f{B}\not\in s$ y $s'=s\cdot\f{B}$.
-  \textit{Demostración.}
-    Se realiza por inducción de la longitud de $s$.
-    \begin{description}
-    \item[$|s|=0$] En este caso $P\tranp{\checkmark}{p}\nil$. 
-      Se obtiene el resultado aplicando la regla~\nombreRegla{req3}.
-    \item[$|s|>0$] Ahora se pueden distinguir tres casos dependiendo 
-    de la primera característica de $s$:
-      \begin{description}
-      \item[$s=\f{A}s_1$.] En este caso existe $p_1,q\in(0,1)$
-        tal que $P\tranp{\f{A}}{p_1}P_1\vtranp{s_1\checkmark}{q}\nil$. 
-        Al aplicar la regla~\nombreRegla{req2}
-        se obtiene $\require{A}{B}{P}\tranp{\f{A}}{p_1}\mandatory{B}{P_1}$.
-        Obtenemos el resultado al aplicar la proposición~\ref{prop:mand}. 
-      \item[$s=\f{B}s_1$.] En este caso existe $p_1,q\in(0,1)$
-        tal que $P\tranp{\f{A}}{p_1}P_1\vtranp{s_1\checkmark}{q}\nil$. 
-        Al aplicar la regla~\nombreRegla{req2}
-        se obtiene $\require{A}{B}{P}\tran{\f{B}}{p_1}\mandatory{A}{P_1}$.
-        Se obtiene el resultado al aplicar la proposición~\ref{prop:mand}.
-      \item[$s=\f{C}s_1$ con $\f{C}\neq\f{A}$ y $\f{C}\neq\f{A}$.]
-        En este caso existe $p_1,q\in(0,1)$
-        tal que $P\tranp{\f{C}}{p_1}P_1\vtranp{s_1\checkmark}{q}\nil$.
-        Al aplicar la regla~\nombreRegla{req1}, se obtiene
-        $
-        \require{A}{B}{P}\tranp{\f{C}}{p_1}\require{A}{B}{P_1}
-        $, y luego el resultado al aplicar la hipótesis de inducción
-        sobre $s_1$.
-      \end{description}
-    \end{description}
+\begin{proof}
+  This proposition is an inmmediate consequence of
+  Lemma~\ref{lem:forb} in the Appendix~\ref{app:proofs}
+\end{proof}
 \eprop
 
-\bprop\label{cor:req}
+\bprop\label{prop:req}
   Dado el término $P\in\fodaPAp$ y las características $\feature{A},\feature{B}\in\calF$,
   entonces
   \begin{displaymath}
     \prodp(\require{A}{B}{P})=\semdenp{\require{A}{B}{\cdot}}(\prodp(P))
   \end{displaymath}
-  \textit{Demostración.}
-    Este corolario es una consecuencia directa de la proposición~\ref{prop:req} y de la definición
-    \ref{def:semantic:operators}.
+\begin{proof}
+  This proposition is an inmmediate consequence of
+  Lemma~\ref{lem:req} in the Appendix~\ref{app:proofs}
+\end{proof}
 \eprop
-
 
 \bprop\label{prop:excl}
-  Dado el término $P\in\fodaPAp$, las características $\feature{A},\feature{B}\in\calF$, la traza $s\in\calF^*$ y
-  la probabilidad $p\in(0,1)$. Entonces $P\vtran{s\checkmark}{p}\nil$ si y sólo si
-  $\exclude{A}{B}{P}\vtranp{s\checkmark}{p}\nil$, $\f{A}\not\in s$ y $\f{B}\not\in s$.
-  \textit{Demostración.}
-    Se realiza la demostración por la inducción de la longitud de $s$.
-    \begin{description}
-    \item[$|s|=0$] En este caso $P\tranp{\checkmark}{p}\nil$. 
-      Se obtiene el resultado al aplicar la regla~\nombreRegla{excl4}.
-    \item[$|s|>0$] Ahora pueden distinguirse tres casos dependiendo de la
-    primera característica de $s$:
-      \begin{description}
-      \item[$s=\f{A}s_1$.] En este caso existe $p_1,q\in(0,1)$
-        tal que $P\tranp{\f{A}}{p_1}P_1\vtranp{s_1\checkmark}{q}\nil$. 
-        Al aplicar la regla~\nombreRegla{req2}
-        se obtiene $\require{A}{B}{P}\tranp{\f{A}}{p_1}\forbid{B}{P_1}$.
-        Ahora por la proposición~\ref{prop:mand1}, 
-        \begin{itemize}
-        \item $\f{B}\in s_1$ si y sólo si $\mandatory{B}{P_1}\vtranp{s_1\cdot \checkmark}{q}\nil$.
-        \item $\f{B}\not\in s_1$ si y sólo si  $\mandatory{B}{P_1}\vtranp{s_1\f{B}\checkmark}{q}\nil$.
-        \end{itemize}
-      \item[$s=\f{C}s_1$ con $\f{C}\neq\f{A}$.]
-        En este caso es $p_1,q\in(0,1)$
-        tal que $P\tranp{\f{C}}{p_1}P_1\vtranp{s_1\checkmark}{q}\nil$.
-        Al aplicar la regla~\nombreRegla{req1},  se obtiene
-        $
-        \require{A}{B}{P}\tranp{\f{C}}{p_1}\require{A}{B}{P_1}
-        $, y luego el resultado se obtiene al aplicar la  hipótesis de inducción sobre $s_1$.
-      \end{description}
-    \end{description}
-\eprop
-
-\bprop\label{cor:excl}
   Dado el término $P\in\fodaPAp$ y las características $\feature{A},\feature{B}\in\calF$, entonces
   \begin{displaymath}
     \prodp(\exclude{A}{B}{P})=\semdenp{\exclude{A}{B}{\cdot}}(\prodp(P))
   \end{displaymath}
-  \textit{Demostración.}
-    Este corolario es una consecuencia directa de la proposición~\ref{prop:excl} y la definición~\ref{def:semantic:operators}.
+\begin{proof}
+  This proposition is an inmmediate consequence of
+  Lemma~\ref{lem:excl} in the Appendix~\ref{app:proofs}
+\end{proof}
 \eprop
 
 \bthm\label{prop:equivprob}
@@ -395,14 +94,14 @@ entre la semántica operacional y la semántica denotacional.
   $(pr,p)\in\prodp(P)$.
   \textit{Demostración.}
     La demostración es trivial por inducción estructural sobre $P$
-    al usar los corolarios~\ref{prop:pref}, \ref{cor:prefopt}, \ref{cor:choice},
-    \ref{cor:paral},  \ref{cor:mand}, \ref{cor:forb}, \ref{cor:req}, y~\ref{cor:excl}.
+    al usar los corolarios~\ref{prop:pref}, \ref{prop:prefopt}, \ref{prop:choice},
+    \ref{prop:paral},  \ref{prop:mand}, \ref{prop:forb}, \ref{prop:req}, y~\ref{prop:excl}.
 \ethm
 
 
   
 %%% Local Variables: 
 %%% mode: latex
-%%% TeX-master: "../../main"
-%%% ispell-local-dictionary: "castellano"
+%%% TeX-master: "main"
+%%% ispell-local-dictionary: "english"
 %%% End: 
